--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,6 @@ div.table-box table thead tr th{
 }
 /* style for swal.fire in js*/
 .swal2-container.swal2-center>.swal2-popup{
-    width : 30%;
     font-size: 13px;
 }
 .style-icon{
@@ -176,6 +175,9 @@ div.table-box table thead tr th{
         }
     }
     @media screen and (max-width: 450px){
+        .swal2-container.swal2-center>.swal2-popup{
+            width : 40% !important;
+        }
         .form-information .box-form input , .form-information .box-form label , .form-information .box-form button , .form-information .box-form .validate{
             margin-right : 10px;
         }
